# MolDef-spec-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_molecular_definition_overview.ipynb  02_sequence_profile.ipynb  03_allele_profile.ipynb  04_variation_profile.ipynb  README.md  allele_profiles_demo.ipynb  molecular_definition_demo.ipynb  sequence_porfile_demo.ipynb
src/exceptions/: fhir.py
src/profiles/: allele.py  sequence.py  variation.py
src/resources/: fhirtypesextra.py  moleculardefinition.py
src/resrouces/: moleculardefinition.py
tests/: test_alleleprofile.py  test_moleculardefinition.py  test_sequenceprofile.py  test_variation.py  test_variationprofile.py
